styles/bingo.css
body {
  font-family: Arial, sans-serif;
  height: 90vh;
}

#help-button {
  position: fixed;
  bottom: 20px;
  right: 20px;
  cursor: pointer;
  width: 60px;
}

.absolute {
  position: absolute;
}

.aspect-square {
  aspect-ratio: 1;
}

.bingo-ball {
  width: 60px;
  height: 60px;
  border-radius: 50%;
  font-size: 1.8rem;
  font-weight: bold;
  color: black;
  background: white;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 8px solid;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
}

.bingo-ball.blue {
  border-color: #1976d2;
}
.bingo-ball.red {
  border-color: #e53935;
}
.bingo-ball.gray {
  border-color: #9e9e9e;
}
.bingo-ball.purple {
  border-color: #7e57c2;
}
.bingo-ball.yellow {
  border-color: #fbc02d;
}

.bingo-ball-brand {
  width: 80px;
  height: 80px;
  border-radius: 50%;
  font-size: 4rem;
  font-weight: bold;
  color: black;
  background: white;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 12px solid;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
}
.bingo-ball-brand.blue {
  border-color: #1976d2;
  rotate: 15deg;
}
.bingo-ball-brand.red {
  border-color: #e53935;
  rotate: -15deg;
  margin-left: -10px;
}
.bingo-ball-brand.gray {
  border-color: #9e9e9e;
  rotate: 15deg;
  margin-left: -10px;
}
.bingo-ball-brand.purple {
  border-color: #7e57c2;
  rotate: -15deg;
  margin-left: -10px;
}
.bingo-ball-brand.yellow {
  border-color: #fbc02d;
  rotate: 15deg;
  margin-left: -10px;
}

.bingo-history {
  width: 60px;
  height: 60px;
  border-radius: 50%;
  font-size: 1.8rem;
  font-weight: bold;
  color: black;
  background: white;
  border: 2px solid;
  border-color: #000000;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
}

.bingo-history-main {
  width: 120px;
  height: 120px;
  border-radius: 50%;
  font-size: 1.8rem;
  font-weight: bold;
  color: black;
  background: white;
  border: 12px solid;
  border-color: #1976d2;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
}

.bottom-0 {
  bottom: 0;
}

.border {
  border-width: 0px;
}

.bg-primary {
  background-color: #85cfe0; /* Primary color */
}

.bg-secondary {
  background-color: #e53935; /* Secondary color */
}

.bg-none {
  background-color: transparent;
}

.close-button {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.close-button:hover,
.close-button:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

.flex {
  display: flex;
}

.flex-col {
  flex-direction: column;
}

.gap-1 {
  gap: 0.25rem; /* 4px */
}

.gap-4 {
  gap: 1rem; /* 16px */
}

.gap-8 {
  gap: 2rem; /* 32px */
}

.grid {
  display: grid;
}

.grid-cols-15 {
  grid-template-columns: repeat(15, minmax(0, 1fr));
}

.grid-rows-5 {
  grid-template-rows: repeat(5, minmax(0, auto));
}

.h-1\/2 {
  height: 50%;
}

.h-full {
  height: 100%;
}

.h-screen {
  height: 100vh; /* Full viewport height */
}

.items-center {
  align-items: center;
}

.justify-between {
  justify-content: space-between;
}

.justify-center {
  justify-content: center;
}

.justify-start {
  justify-content: flex-start;
}

.left-0 {
  right: 0;
}

.modal {
  display: none;
  position: fixed;
  z-index: 20;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgba(0, 0, 0, 0.4);
}

#help-modal h2 {
  color: #333;
  font-size: 1.5rem;
  margin-bottom: 1rem;
  text-align: center; /* Center the title */
}

.modal-content {
  background-color: #fefefe;
  margin: 15% auto;
  padding: 20px;
  border: 1px solid #888;
  width: 50%; /* Reduced width for desktop */
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

/* Media query for smaller screens */
@media (max-width: 768px) {
  .modal-content {
    width: 90%; /* Wider for mobile */
  }
}

#help-modal ul {
  list-style: none;
  padding: 0;
}

#help-modal li {
  font-size: 1.1rem;
  line-height: 1.6;
  color: #555;
  margin-bottom: 0.5rem;
}

#help-modal li strong {
  color: #000;
}

.p-8 {
  padding: 2rem; /* 32px */
}

.px-4 {
  padding-left: 1rem;
  padding-right: 1rem;
}

.relative {
  position: relative;
}

.right-0 {
  left: 0;
}

.rounded-full {
  border-radius: 9999px;
}

.top-0 {
  top: 0;
}

.-top-4 {
  top: -1rem; /* -16px */
}

.top-6 {
  top: 1.5rem; /* 24px */
}

.top-16 {
  top: 4rem; /* 64px */
}

.top-26 {
  top: 6.5rem; /* 104px */
}

.text-lg {
  font-size: 1.125rem; /* 18px */
}

.text-xl {
  font-size: 1rem; /* 16px */
}

.text-2xl {
  font-size: 1.5rem; /* 24px */
}

.text-3xl {
  font-size: 1.875rem; /* 30px */
}

.w-6 {
  width: 1.5rem; /* 24px */
}

.w-8 {
  width: 2rem; /* 32px */
}

.w-30 {
  width: 7.5rem; /* 120px */
}

.w-full {
  width: 100%;
}

.z-0 {
  z-index: 0;
}

.z-10 {
  z-index: 10;
}

/* No tailwind classes */

.svg-shadow {
  -webkit-filter: drop-shadow(3px 3px 2px rgba(0, 0, 0, 0.7));
  filter: drop-shadow(3px 3px 2px rgba(0, 0, 0, 0.7));
  /* Similar syntax to box-shadow */
}

.svg-shadow:hover {
  -webkit-filter: none;
  filter: none;
}
@media (max-width: 768px) {
  .grid-cols-15 {
    grid-template-columns: repeat(7, minmax(0, 1fr)); /* 7 columns on mobile */
  }

  .bingo-grid-cell-mobile {
    height: 40px !important;
    font-size: 1.2rem !important;
  }

  .bingo-ball {
    width: 40px;
    height: 40px;
    font-size: 1rem;
    border-width: 4px;
  }

  .bingo-history {
    width: 40px;
    height: 40px;
    font-size: 1rem;
  }

  .bingo-history-main {
    width: 80px;
    height: 80px;
    font-size: 1.2rem;
    border-width: 8px;
  }

  .text-xl {
    font-size: 0.8rem;
  }

  .text-3xl {
    font-size: 1.2rem;
  }

  .p-8 {
    padding: 1rem;
  }

  .gap-4 {
    gap: 0.5rem;
  }

  .gap-8 {
    gap: 1rem;
  }

  .w-6 {
    width: 1rem;
  }

  .w-8 {
    width: 1.5rem;
  }

  .-top-4 {
    top: -0.5rem;
  }

  .top-6 {
    top: 0.8rem;
  }

  .top-16 {
    top: 2rem;
  }

  .top-26 {
    top: 3.5rem;
  }
}

